@@ -2,7 +2,7 @@ sg3-utils (1.26-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sun, 02 DEc 2007 16:00:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Wed, 12 Dec 2007 23:00:00 -0500
 
 sg3-utils (1.25-0.1) unstable; urgency=low
 
